--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(simple_sim_crosswalk)
+project(simple_sim_h_course)
 
 find_package(catkin REQUIRED)
 
